--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-common</artifactId>
-			<version>2.7.1</version>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-client</artifactId>
+			<version>0.95.0</version>
 		</dependency>
 
 		<dependency>
