--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<mybatis.version>1.1.0</mybatis.version>
 		<jdbc.version>5.1.36</jdbc.version>
 		<JAVA_HOME>D:\Java\jdk1.8.0_74</JAVA_HOME>
+		<ignite.version>1.6.0</ignite.version>
 	</properties>
 
 	<dependencies>
@@ -211,6 +212,28 @@
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy.modules.http-builder</groupId>
+			<artifactId>http-builder</artifactId>
+			<version>0.7</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.ignite</groupId>
+			<artifactId>ignite-core</artifactId>
+			<version>${ignite.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ignite</groupId>
+			<artifactId>ignite-spring</artifactId>
+			<version>${ignite.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ignite</groupId>
+			<artifactId>ignite-indexing</artifactId>
+			<version>${ignite.version}</version>
 		</dependency>
 
 		<!-- <dependency> <groupId>javabuilder</groupId> <artifactId>javabuilder</artifactId> 
